--- a/src/login.css
+++ b/src/login.css
@@ -18,14 +18,11 @@ body{
 }
 
 
-.full-page
+.l-page
 
 {
-
     height: 100vh;
-
-    width: 100%;
-   
+    width: 100%;   
     background-size: cover;
     background-image: url("/public/img/1.png");
     
@@ -155,7 +152,7 @@ nav ul li a:hover
 
 
 
-.main-heading
+.l-heading
 
 {
 
@@ -201,7 +198,7 @@ nav ul li a:hover
     
 }
 
-.form-group button
+.l-group button
 
 {
 
